<resources>
    <string name="app_name">आराधना</string>
    <string name="ganapatiji">श्री गणपती</string>
    <string name="vishnuji">श्री विष्णु</string>
    <string name="mahadevji">श्री महादेव</string>
    <string name="yogeshwariddevi">श्री योगेश्वरी देवी</string>
    <string name="kishanji">श्री कृष्ण</string>
    <string name="aartya">आरत्या</string>
    <string name="atharvashirsha">श्री गणपती अथर्वशीर्ष</string>
    <string name="ganapatistotra">श्री गणपती स्तोत्र</string>
    <string name="titleAth">श्री गणेश अथर्वशीर्ष स्तोत्र</string>
    <string name="atharvashirshaText">
॥ श्रीगणेशाय नमः ॥\n
शान्ति मन्त्रः॥\n
ॐ भद्रं कर्णेभिः श्रृणुयाम देवा ।\n
भद्रं पश्येमाक्षभिर्यजत्राः ।\n
स्थिरैरङ्गैस्तुष्टुवांसस्तनूभिः ।\n
व्यशेम देवहितं यदायुः ।\n
ॐ स्वस्ति न इन्द्रो वृद्धश्रवाः ।\n
स्वस्ति नः पुषा विश्वैवेदाः ।\n
स्वस्ति नस्तार्क्ष्यो अरिष्टनेमिः ।\nस्वस्ति नो बृहस्पतिर्दधातु ।\n
ॐ शान्तिः शान्तिः शान्तिः ।\n
अथर्वशीर्ष\n
\n
ॐ नमस्ते गणपतये ।\n
त्वमेव प्रत्यक्षं तत्त्वमसि ।\n
त्वमेव केवलं कर्तासि ।\n
त्वमेव केवलं धर्तासि ।\n
त्वमेव केवलं हर्तासि ।\n
त्वमेव सर्वं खल्विदं ब्रह्मासि ।\n
त्वं साक्षादात्मासि नित्यम् ॥१॥\n
\n
ऋतं वच्मि ।\n
सत्यं वच्मि ॥२॥\n
\n
अव त्वं माम् ।\n
अव वक्तारम् ।\n
अव श्रोतारम् ।\n
अव दातारम् ।\n
अव धातारम् ।\n
अवानूचानमवशिष्यम्‌‍ |\n
अव पश्चात्तात् ।\n
अव पुरस्तात् ।\n
अवोत्तरात्तात् ।\n
अव दक्षिणात्तात् ।\n
अव चोर्ध्वात्तात् ।\n
अवाधरात्तात् ।\n
सर्वतो मां पाहि पाहि समन्तात् ॥३॥\n
\n
त्वं वाङ्‌मयस्त्वं चिन्मयः ।\n
त्वमानन्दमयस्त्वं ब्रह्ममयः ।\n
त्वं सच्चिदानन्दाद्वितीयोऽसि ।\n
त्वं प्रत्यक्षं ब्रह्मासि ।\n
त्वं ज्ञानमयो विज्ञानमयोऽसि ॥४॥\n
\n
सर्वं जगदिदं त्वत्तो जायते ।\n
सर्वं जगदिदं त्वत्तस्तिष्ठति ॥\n
सर्वं जगदिदं त्वयि लयमेष्यति ।\n
सर्वं जगदिदं त्वयि प्रत्येति ।\n
त्वं भूमिरापोऽनलोऽनिलो नभः ।\n
त्वं चत्वारि वाक्पदानि ॥५॥\n

त्वं गुणत्रयातीतः ।\n
त्वं देहत्रयातीतः ।\n
त्वं कालत्रयातीतः ।\n
त्वं मूलाधारस्थितोऽसि नित्यम् ।\n
त्वं शक्तित्रयात्मकः ।\n
त्वां योगिनो ध्यायन्ति नित्यम् ।\n
त्वं ब्रह्मा त्वं विष्णुस्त्वंरुद्रस्त्वमिन्द्रस्त्वमग्निस्त्वं\n
वायुस्त्वं सूर्यस्त्वं चन्द्रमास्त्वं ब्रह्मभूर्भुवःस्वरोम् ॥६॥\n
\n
गणादिं पूर्वमुच्चार्य वर्णादिं तदनन्तरम् ।\n
अनुस्वारः परतरः ।\n
अर्धेन्दुलसितम् ।\n
तारेण ऋद्धम् ।\n
एतत्तव मनुस्वरूपम् ।\n
गकारः पूर्वरूपम् ।\n
अकारो मध्यमरूपम् ।\n
अनुस्वारःश्चान्त्यरूपम् ।\n
बिन्दुरूत्तररूपम् ।\n
नादः सन्धानम् ।\n
संहितासन्धिः ।\n
सैषागणेशविद्या ।\n
गणकऋषिः ।\n
निचृद्‌गायत्री छन्दः ।\n
गणपतिर्देवता ।\n
ॐ गं गणपतये नमः ॥७॥\n
\n
एकदन्ताय विद्‌महे ।\n
वक्रतुण्डाय धीमहि ।\n
तन्नो दन्ती प्रचोदयात् ॥८॥\n
\n
एकदन्तंचतुर्हस्तंपाशमङ्कुशधारिणम् ।\n
रदं च वरदं हस्तैर्बिभ्राणं मूषकध्वजम् ।\n
रक्तं लंबोदरं शूर्पकर्णकं रक्तवाससम् ।\n
रक्तगन्धानुलिप्ताङ्गं रक्तपुष्पैः सुपूजितम् ।\n
भक्तानुकंपिनं देवं जगत्कारणमच्युतम् ।\n
आविर्भूतं च सृष्ट्यादौ प्रकृतेः पुरुषात् परम् ।\n
एवं ध्यायति यो नित्यं स योगी योगिनां वरः ॥९॥\n
\n
ॐ नमो वातप्रतये ।\n
नमो गणपतये ।\n
नमः प्रमथपतये ।\n
नमस्ते अस्तु लम्बोदरायैकदन्ताय विघ्ननाशिने\n
शिवसुताय श्रीवरदमूर्तये नमः ॥१०॥\n
\n
फलश्रुती\n
\n
एतदथर्वशीर्षं योऽधीते स ब्रह्मभूयाय कल्पते ।\n
स सर्वविघ्नैर्न बाध्यते ।\n
स सर्वतः सुखमेधते ।\n
स पंचमहापापात् प्रमुच्यते ।\n
सायमधीयानो दिवसकृतं पापं नाशयति ।\n
प्रातरधीयानो रात्रिकृतं पापं नाशयति ।\n
सायंप्रातः प्रयुंजानो अपापो भवति ।\n
सर्वत्राधीयानोऽपविघ्नोभवति ।\n
धर्मार्थकाममोक्षं च विन्दति ।\n
इदमथर्वशीर्षमशिष्याय न देयम् ।\n
यो यदि मोहाद् दास्यति स पापीयान् भवति ।\n
सहस्त्रावर्तनात् ।\n
यं यं काममधीते तं तमनेन साधयेत् ॥११॥\n
\n
अनेन गणपतिमभिषिञ्चति ।\n
स वाग्मी भवति ।\n
चतुर्थ्यामनश्वन्‌जपति ।\n
स विद्यावान भवति ।\n
इत्यथर्वणवाक्यम् ।\n
ब्रह्माद्यचरणं विद्यात् ।\n
न बिभेति कदाचनेति ॥१२॥\n
\n
यो दूर्वाङ्कुरैर्यजति ।\n
स वैश्रवणोपमो भवति ।\n
यो लाजैर्यजति ।\n
स यशोवान् भवति ।\n
स मेधावान् भवति ।\n
यो मोदकसहस्त्रेण यजति ।\n
स वांछितफलमवाप्नोति ।\n
यः साज्यसमिद्‌भिर्यजति ।\n
स सर्वं लभते स सर्वं लभते ॥१३॥\n
\n
अष्टौ ब्राह्मणान् सम्यग् ग्राहयित्वा सूर्यवर्चस्वी भवति ।\n
सूर्यग्रहे महानद्यां प्रतिमासंनिधौ वा जपत्वा ।\n
सिद्धमन्त्रो भवति ।\n
महाविघ्नात् प्रमुच्यते ।\n
महापापात् प्रमुच्यते ।\n
महादोषात प्रमुच्यते ।\n
स सर्वविद् भवति स सर्वविद् भवति ।\n
य एवं वेद ।\n
इत्युपनिषत् ॥१४॥\n
\n
ॐ सह नाववतु ।\n
सह नौ भुनक्तु ।\n
सह वीर्यं करवावहै ।\n
तेजस्विनावधीतमस्तु ।\n
मा विद्‌विषावहै ॥\n
॥ ॐ शान्ति: शान्ति: शान्ति: ॥\n
\n
इति श्रीगणपत्यथर्वशीर्षोपनिषद् !!\n
    </string>

</resources>